staging/manifold-embeddings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manifold-embeddings-s
  namespace: default
spec:
  clusterIP: 10.43.179.225
  clusterIPs:
    - 10.43.179.225
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: port-0
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: manifold-embeddings-s
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
