staging/manifold-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manifold-website
  namespace: default
spec:
  clusterIP: 10.43.231.18
  clusterIPs:
    - 10.43.231.18
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: port-0
      port: 12549
      protocol: TCP
      targetPort: 80
  selector:
    app: manifold-website
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
