staging/manifold-embeddings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manifold-embeddings-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: api.eventflow.ru
    http:
      paths:
      - backend:
          service:
            name: manifold-embeddings-s
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.eventflow.ru
    secretName: eventflow.ru
status:
  loadBalancer:
    ingress:
    - ip: 5.187.4.137
    - ip: 91.228.154.109
